--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>About Me</title>
+	<link rel="site icon" type="image/png" href="imgs/email.png"/>
+
+	<title>About</title>
 </head>
-<body>
-	<!-- You do not need to make any changes to this file, but
-	you should still review the tags to make sure that you
-	are familiar with them. -->
+<body id="about-back">
+	<div class = "skip"><a href="#skip">Skip to Main Content</a></div>
+	
 	<header>
 		<nav>
-			<ul>
-				<li><a href = "index.html">About Me</a></li>
-				<li><a href = "personaltravel.html">Personal Travel</a></li>
-				<li><a href = "random.html">Miscellaneous</a></li>
-				<li><a href = "https://www.linkedin.com/in/samuel-osei-afriyie-b1543257">LinkedIn</a></li>
+			<ul class="nav_links">
+				<li><a id="active" href = "index.html">About Me</a></li>
+				<li><a href="home.html">Home</a></li>
+				<li><a href = "Bolivia.html">Travels to Bolivia</a></li>
+				<li><a href = "Ghana.html">Travels to Ghana</a></li>
+				<li><a href ="contactform.html">Contact</a></li>
 			</ul>
 		</nav>
-
-		<h1>Hello, Akwaaba! Welcome to my personal site</h1>
-
 	</header>
 
 	<main>
-
-		<p>I am a graduate student interested in information technology accesibility, social innovation/imapact work, and utilizing holistic user experience within artificial intelligence to prevent bias.</p>
-
-		<p>Prior to graduate school, I worked in data center sales consulting with Lenovo and Nvidia. I have a BA from <a href = "http://suny.oneonta.edu">State of New York at Oneonta</a> And now an MS in information science at the University of Michigan. </p>
+		<div class="main">
+			<h1>Hello, I am Sam Afriyie. Welcome to my personal website</h1>
+			<p>Interests</p>
+			<p>I am interested in exploring questions around who holds algorithms accountable? What role does user experience and social computing play in artificial intelligence? My favorite thing to do is travel and volunteer with UN and sustainable development goals related NGOs.</p>
+		</div>
 	</main>
 
+
 	<footer>
-		<p>Samuel Osei Afriyie &copy; 2021</p>
+		<div class="footer">
+		<p>Samuel Osei Afriyie &copy; 2021, <a href="https://www.linkedin.com/in/samuel-osei-afriyie-b1543257">LinkedIn </a></p>
+		</div>
 	</footer>
 </body>
 </html>
