--- a/Bolivia.html
+++ b/Bolivia.html
@@ -11,7 +11,7 @@
 	<link rel="site icon" type="image/png" href="imgs/email.png"/>
 	<title>Travels to Bolivia</title>
 </head>
-<body class="bolivia-back">
+<body id="bolivia-back">
 	<a class = "skip" href="#main">Skip to Main Content</a>
 	<header>
 		<nav>
