--- a/Ghana.html
+++ b/Ghana.html
@@ -25,10 +25,11 @@
             <title>Travels to Ghana</title>
         </header>
         <main>
-        <h1>Ghana</h1>
+        <h1>Return to Ghana.</h1>
         <div class="ghana-container">
             <div id="gh-main">
-            <p>Here are some photos I took when I visited my birth place in Ghana<p>
+            <p>Here are some photos I took when I visited my birth place in Ghana. My family immigrated to the Bronx when I was 16. For the first time in 10 years, I was able to visit and see my grandmother who raised me while my parents lived abroad. The pictures highlight my trip to my hometown, childhood home, the town square and market.
+            <p>
             <div class="gh-imgs">
             <img src = "imgs/gha1.jpg" width="500" alt = "Ghana"/>
             <img src = "imgs/ghan2.JPG" width="500" alt = "Ghhome"/>
