--- a/contactform.html
+++ b/contactform.html
@@ -8,7 +8,7 @@
     <link rel="site icon" type="image/png" href="imgs/email.png"/>
 	<title>Contact</title>
 </head>
-<body class="body-back">
+<body id="contact-back">
 	<a class = "skip" href="#main">Skip to Main Content</a>
 
 	<header>
