--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 	
 	<header>
 		<nav>
-			<ul class="nav_links">
+			<ul id="nav_links">
 				<li><a href = "index.html">About Me</a></li>
                 <li><a id="active" href="home.html">Home</a></li>
 				<li><a href = "Bolivia.html">Travels to Bolivia</a></li>
