--- a/Ghana.html
+++ b/Ghana.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="site icon" type="image/png" href="imgs/email.png"/>
     <title>Ghana Travels</title>
+     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KWEKET3TJ"></script>
+     <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+ 
+     gtag('config', 'G-1KWEKET3TJ');
+     </script>
+     
 </head>
 <body id="ghana-back">
     <div class = "skip" ></div><a href="#main">Skip to Main Content</a></div>
