--- a/home.html
+++ b/home.html
@@ -7,6 +7,18 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="site icon" type="image/png" href="imgs/email.png"/>
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KWEKET3TJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1KWEKET3TJ');
+    </script>
+
 	<title>Home</title>
 </head>
 <body id="home-page">
