--- a/Bolivia.html
+++ b/Bolivia.html
@@ -38,16 +38,17 @@
 	<h1>Bolivia</h1>
 	<h2>Volunteer Travel to Lapaz and Cochabamba.</h2>
 
-	<p>I studied international development studies and have a keen interest in promoting technology for good initiatives. Most importantly, sustainable skills training in emerging economies. I am working on ideas like <a href ="https://www.eleemu.com">Eleemu Knowledge Hub</a>.</p>
-
-	<p>Below are some pictures from my trip to Bolivia</p>
+		<p>I studied international development studies and have a keen interest in promoting technology for good initiatives. Most importantly, sustainable skills training in emerging economies. I am working on ideas like <a href ="https://www.eleemu.com">Eleemu Knowledge Hub</a>.
+			 Below are some pictures from my trip to Bolivia
+		</p>
+		
 	<div class="b-img"> 
-	<img src="imgs/bol1.JPG">
-	<img src="imgs/bol2.JPG">
-	<img src="imgs/bol3.JPG">
-	<img src="imgs/bol4.JPG">
-	<img src="imgs/bol5.JPG">
-	<img src="imgs/bol6.JPG">
+		<img src="imgs/bol1.JPG" alt="hills">
+		<img src="imgs/bol2.JPG" alt="andes">
+		<img src="imgs/bol3.JPG" alt="CristoRey">
+		<img src="imgs/bol4.JPG" alt="Incanremains">
+		<img src="imgs/bol5.JPG" alt="mountains">
+		<img src="imgs/bol6.JPG" alt="teachingroup">
 	</div>
 	<footer>
 		<div class="footer">
