--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/html5reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="site icon" type="image/png" href="imgs/email.png"/>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/html5reset.css">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="site icon" type="image/png" href="imgs/email.png"/>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-1KWEKET3TJ"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1KWEKET3TJ"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-	gtag('config', 'G-1KWEKET3TJ');
-	</script>
+		gtag('config', 'G-1KWEKET3TJ');
+		</script>
 
-	<title>About</title>
-</head>
-<body id="about-back">
-	<div class = "skip"><a href="#skip">Skip to Main Content</a></div>
+	    <title>About</title>
+    </head>
+	<body id="about-back">
+		<div class = "skip"><a href="#skip">Skip to Main Content</a></div>
 	
-	<header>
-		<nav>
-			<ul class="nav_links">
-				<li><a id="active" href = "index.html">About Me</a></li>
-				<li><a href="home.html">Home</a></li>
-				<li><a href = "Bolivia.html">Travels to Bolivia</a></li>
-				<li><a href = "Ghana.html">Travels to Ghana</a></li>
-				<li><a href ="contactform.html">Contact</a></li>
-			</ul>
-		</nav>
+		<header>
+				<nav>
+					<ul class="nav_links">
+						<li><a id="active" href = "index.html">About Me</a></li>
+						<li><a href="home.html">Home</a></li>
+						<li><a href = "Bolivia.html">Travels to Bolivia</a></li>
+						<li><a href = "Ghana.html">Travels to Ghana</a></li>
+						<li><a href ="contactform.html">Contact</a></li>
+					</ul>
+				</nav>
 	</header>
 
 	<main>
+		<br>
 		<div class="main">
-			<h1>Hello, I am Sam Afriyie. Welcome to my personal website</h1>
-			<p>Interests</p>
-			<p>I am interested in exploring questions around who holds algorithms accountable? What role does user experience and social computing play in artificial intelligence? My favorite thing to do is travel and volunteer with UN and sustainable development goals related NGOs.</p>
+			<h1>Hello, I am Sam Afriyie. Welcome to my personal website. 
+				<br><br> Interests.
+			</h1>
+	
+			<p>Welcome to my portfolio website! I am currently a graduate student with a strong passion for international development and using technology for good. 
+				Growing up in Ghana, I did not have acess to technology until I was about 12 years old. With a curious spirit, I set out to learn, break and fix my neigbors and guardians phones until they turned back on.</p>
+			<p>Having relatives abroad in England who sent home refurbrished computers gave me a chance to explore further.
+				ßI am interested in exploring questions around who holds algorithms accountable? What role does user experience and social computing play in artificial intelligence? 
+				My favorite thing to do is travel and volunteer with UN and sustainable development goals related NGOs.</p>
 		</div>
 	</main>
 
