--- a/Ghana.html
+++ b/Ghana.html
@@ -39,14 +39,21 @@
     <main>
         <h1>Return to Ghana.</h1>
             <div id="gh-main">
-            <p>Here are some photos I took when I visited my birth place in Ghana. My family immigrated to the Bronx when I was 16. For the first time in 10 years, I was able to visit and see my grandmother who raised me while my parents lived abroad. The pictures highlight my trip to my hometown, childhood home, the town square and market.
-            <p>
+            <p>Here are some photos I took when I visited my birth place in Ghana. My family immigrated to the Bronx when I was 16. For the first time in 10 years, I was able to visit and see my grandmother who raised me while my parents lived abroad. The pictures highlight my trip to my hometown, childhood home, the town square and market.<p>
+            <p>Growing up in such a simple town was a great experience and most of the lessons I learned here drive my passion and life's work now. From growing everything we ate in our farms and gardens
+        Life was truly simple and peaceful. We lived a very communal lifestyle with my grandparents as guardians. This is where I took my first radio apart and partioned my first WNDOS.
+            </p>
         <div class="ghcontainer">
             <img src = "imgs/gha1.jpg" alt = "Ghana" class="imgh"/>
             <img src = "imgs/ghan2.JPG" alt = "Ghhome" class="imgh"/>
             <img src = "imgs/ghan4.JPG" alt = "gh4" class="imgh"/>
             <img src = "imgs/ghan5.JPG" alt = "gh" class="imgh"/>
-            <div class="olay">
+            <img src = "imgs/front.jpg" alt="fh" class="imgh"/>
+            <img src= "imgs/coco.jpg" alt="coc" class="imgh"/>
+            <img src="imgs/ghouse.jpg" alt="hous" class="imgh"/>
+            <img src="imgs/efie.jpg" alt="ef" class="imgh"/>
+            <img src="imgs/wall.jpg" alt="wall" class="imgh"/>
+            <div class="olay"></div>
             <div class="txt">Ghana West Africa</div>
             </div>
             </div>
