--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
 			<h1>What to expect</h1>
 			<p>I am a graduate student interested in information technology accesibility, social innovation/imapact work, and utilizing holistic user experience within artificial intelligence to prevent bias.</p>
 			<p>Prior to graduate school, I worked in data center sales consulting with Lenovo as well as technical sales around artificial intelligence infrastructure @ Nvidia. I did my undergraduate studies in International Development and Business with a second degree in African and Latin American affairs <a href = "http://suny.oneonta.edu">State of New York at Oneonta</a> I am currently a grad student of information science(UX Research, ICTD and data ethics) at the University of Michigan. </p>
+            <p>At the University of Michigan, I participate in events with researchers at the Center of Technology and Computing for International Development and Ethics in Computing and Information sciences at UMSI</p>
 			</div>
 	</main>
 
