--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 		<br>
 		<div class="main">
 			<h1>Hello, I am Sam Afriyie. Welcome to my personal website. 
-				<br><br> Interests.
 			</h1>
 	
 			<p>Welcome to my portfolio website! I am currently a graduate student with a strong passion for international development and using technology for good. 
 				Growing up in Ghana, I did not have acess to technology until I was about 12 years old. With a curious spirit, I set out to learn, break and fix my neigbors and guardians phones until they turned back on.</p>
 			<p>Having relatives abroad in England who sent home refurbrished computers gave me a chance to explore further.
-				ßI am interested in exploring questions around who holds algorithms accountable? What role does user experience and social computing play in artificial intelligence? 
+				I am interested in exploring questions around who holds algorithms accountable? What role does user experience and social computing play in artificial intelligence? 
 				My favorite thing to do is travel and volunteer with UN and sustainable development goals related NGOs.</p>
+			<p>My ultimate goal in the future is to establish a technology incubator that helps small startups involve sustainable business plans.</p>
 		</div>
 	</main>
 
